发布第一条博客，学习md语法

--- a/hexo-jason-blog/_config.yml
+++ b/hexo-jason-blog/_config.yml
@@ -98,6 +98,10 @@ ignore:
 ## Themes: https://hexo.io/themes/
 theme: keep
 
+# 添加这一行，使用hexo s 启动时，会默认使用_config.keep.yml里的配置
+theme_config: _config.keep.yml
+
+
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
