--- a/hexo-jason-blog/_config.yml
+++ b/hexo-jason-blog/_config.yml
@@ -96,7 +96,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: maupassant
+theme: keep
 
 # 添加这一行，使用hexo s 启动时，会默认使用_config.keep.yml里的配置
 theme_config: _config.keep.yml
